Unreviewed, drop clobberWorld since it is not necessary https://bugs.webkit.org/show_bug.cgi?id=246954 rdar://101506332

* Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):

Canonical link: https://commits.webkit.org/255922@main